# Stormy

./: .gitignore  .travis.yml  CMakeLists.txt  Library_paths.props  README.md  Stormy.sln  paths.props
Meteo_Aggregate_Scripts/: max.py
Meteo_Parse_Scripts/: AGHReader.py  ECOCLIMA_MeteoParser.py  StacjameteoReader.py
RStormy/: DESCRIPTION  go.R
Server_Acquisition/: Server_Acquisition.vcxproj  Server_Acquisition.vcxproj.filters
Server_Common/: CMakeLists.txt  Server_Common.vcxproj  Server_Common.vcxproj.filters
Server_Common/include/: db_config.h  db_expiration_engine.h  py_executor.h  rest_request_bad.h
Server_Common/include/common/: csv_cookbook.hpp  db_expiration_engine.h  db_expiration_task.h  entity_measurement.h  meteo_data.hpp  meteo_element.hpp  net_http_server.hpp  net_request_factory.hpp  net_util.hpp  rest_constant.h  rest_cookbook.h  rest_uri_parser.h  station_data.hpp  util.h  util_task_scheduler.hpp  util_task_template.hpp
Server_Common/src/: csv_cookbook.cpp  db_config.cpp  db_expiration_engine.cpp  db_expiration_task.cpp  db_handler.cpp  db_handler.h  db_setting.h  entity_measurement.h  entity_station.h  json_config.cpp  json_config.h  net_common_requests.hpp  net_request.hpp  net_request_factory.cpp  net_util.cpp  net_util.hpp  py_executor.cpp  py_function.cpp  py_function.h  rest_constant.h  rest_cookbook.cpp  rest_cookbook.h  rest_request_get_options.cpp  rest_uri_parser.cpp  rest_uri_parser.h  util.cpp  util.h  yaml_util.cpp  yaml_util.h
Server_Common/src/test/: json_config_test.h  rest_uri_parser_test.h  run_all.cpp
common/: Types.h  (+37 more)
(+417 files in other folders)
