cmake_minimum_required(VERSION 2.8.11)
project (Stormy)

add_definitions("-std=c++11 -std=gnu++11")

# Libraries paths
#set (BOOST_PATH "D:/Programowanie/Biblioteki/Tidy/boost_1_55_0_vc2010")
#set (POCO_INC_PATH "D:/Programowanie/Biblioteki/Tidy/poco-1.5.3-all_2013/include")
#set (JSON_INC_PATH "D:/Programowanie/Biblioteki/Tidy/json-cpp_vc2013/jsoncpp/include")

add_subdirectory (Server_Common)